[bugfix/#118] 글자 overflow시 scroll이 생기도록 수정 close #118

--- a/Back_end/static/css/ibas_contents.css
+++ b/Back_end/static/css/ibas_contents.css
@@ -703,7 +703,7 @@ input[type=checkbox] + label:after {
     min-height: 250px;
     background-color: white !important;
     color: #3a3a3a !important;
-    /*overflow: auto;*/
+    overflow: scroll;
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
 }
